syntax = "proto3";
package pulse.proto;
option java_package = "com.kitware.physiology.pulse";
option optimize_for = SPEED;

import "cdm/Scenario.proto";
import "pulse/PulseConfiguration.proto";

message ScenarioData
{
  cdm.ScenarioData                        Scenario           = 1;
  ConfigurationData                       Configuration      = 2;
}